# Nexus

./: .gitignore  .prettierrc  AGENTS.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/开发文档/: 里程碑.md  项目进度.md
docs/经验总结/: 前端组件化规范.md  提示词记录.md
docs/设计文档/原型设计/app-v2/: 01-workspace.html  02-sync.html  03-project.html  04-requirements.html  05-prototype.html  06-tasks.html  07-review.html  index.html
docs/需求文档/: PRD.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  workspace.rs
src-tauri/src/commands/: credential.rs  git.rs  mod.rs  system.rs
src/api/: git.ts  system.ts  workspace.ts
src/assets/: main.css
src/components/: PlaceholderView.vue
src/components/Layout/: index.vue
src/components/ui/: UiIcon.vue  UiMarkdownEditor.test.ts  UiMarkdownEditor.vue  UiSurface.vue  UiTabGroup.vue
src/router/: index.ts
src/stores/: project.ts  tasks.ts  workspace.ts
src/views/: ProjectView.vue  SettingsView.vue  SyncView.vue  WorkspaceView.vue
src/views/Overview/: index.vue
src/views/Prototype/: index.vue
src/views/Requirements/: index.vue
src/views/Retrospective/: index.vue
src/views/Settings/: index.vue  shared.css  types.ts
src/views/Sync/: index.vue
src/views/Tasks/: index.vue
src/views/Tech/: index.vue
src/views/Workspace/: index.vue
src/views/project/: OverviewView.vue  PrototypeView.vue  RequirementsView.vue  RetrospectiveView.vue  TasksView.vue  TechView.vue
(+70 files in other folders)
